add other file utils from 1.18